--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -30,7 +30,7 @@
 @media ( max-width: 1100px )
     .search 
         &__input
-            max-width: 300px
+            max-width: 300px   
 @media ( max-width: 992px )
     .body
         .container--max-width 
@@ -50,6 +50,12 @@
                     height: 265px
         .carousel-indicators
             bottom: 80px
+        .catalog
+            .catalog-iner
+                &__products-title
+                    font-size: 18px
+                &__products-img                    
+                    margin-top: 60px
     .header        
         .container--max-width 
             max-width: 992px
@@ -106,7 +112,8 @@
                     border: none
                     border-radius: 0px 3px 3px 0px
                     color: #fff
-                    width: 62px
+                    width: 62px        
+        
                     
 
 @media ( max-width: 768px )
@@ -146,6 +153,8 @@
                 &__products-title                
                     margin-top: 13px
                     margin-left: 13px
+                &__products-img 
+                    margin-top: 50px
                     
 @media ( max-width: 576px )
     .header
